Changed the example cogs to the actual cogs used by the bot.

--- a/config_example.ini
+++ b/config_example.ini
@@ -4,7 +4,7 @@ prefix: !, ?
 description: This bot is an example!
 game: Bot Simulator 1993
 # separate multiple cogs with commas.
-cogs: cogs.games, cogs.utility
+cogs: cogs.utility, cogs.arttools, cogs.fun, cogs.rp, cogs.derpibooru
 
 [Authentication]
 # Enter your OAuth token here. The bot will not function without it.
