added source info and an up-to-date config example.

--- a/config_example.ini
+++ b/config_example.ini
@@ -5,12 +5,11 @@ description: This bot is an example!
 game: Bot Simulator 1993
 # separate multiple cogs with commas.
 cogs: cogs.utility, cogs.arttools, cogs.fun, cogs.rp, cogs.derpibooru
+source_url: https://github.com/Shikogo/CelestiaBot
 
 [Authentication]
 # Enter your OAuth token here. The bot will not function without it.
 token: <token>
-# enter your user ID here.
-owner: 123456789123456789
 # list mod roles here, separated by commas.
 mod_roles: Mod, Admin, Op
 
