--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.6.0
 certifi==2018.1.18
 chardet==3.0.4
 DerPyBooru==0.7.3
-discord.py==1.0.0a1428+g4fef6fc
+#discord.py==1.0.0a1428+g4fef6fc
 idna==2.6
 multidict==4.0.0
 Pillow==5.0.0
