--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ certifi==2018.1.18
 chardet==3.0.4
 DerPyBooru==0.7.3
 idna==2.6
+lxml==4.1.1
 multidict==4.0.0
 Pillow==5.0.0
+pony==0.7.3
 requests==2.18.4
 urllib3==1.22
 uvloop==0.9.1
